fixing hero slim on mobile

--- a/modules/widgets/hero/hero.scss
+++ b/modules/widgets/hero/hero.scss
@@ -194,8 +194,15 @@ $3dsize: 6px;
     &.copybased {
       border-top: 1px solid $colorGrey2;
       border-bottom: 1px solid $colorGrey2;
-      margin-left: -15px; margin-right: -15px;
       padding: 0 15px;
+
+      margin: 10px -15px;
+
+      &.slim {
+        .controls {
+          left: 11px;
+        }
+      }
     }
   }
 }
